change for all page-style

--- a/style.css
+++ b/style.css
@@ -2,24 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Lora', serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-body {
-    background-color: rgb(17, 13, 13);
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 400px);
+    background-color: #0099ff;
+    padding-top: 200px;
 }
 
 .text-to-speak {
-    text-align: center;
     color: aliceblue;
-    position: relative;
-    top: 150px;
 }
 
 h2 {
-    position: absolute;
-    left: 680px;
-    top: -40px;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+    text-decoration: underline;
 }
 
 textarea {
@@ -28,40 +34,48 @@ textarea {
     border-radius: 20px;
     padding: 15px;
     font-size: 22px;
+    display: block;
+    width: 700px;
+    height: 200px;
+    border: 1px solid #004979;
+    box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.436);
+}
+
+@media(max-width:1100px) {
+    textarea {
+        width: 500px;
+    }
+}
+
+@media(max-width:767px) {
+    textarea {
+        width: 350px;
+    }
+}
+
+@media(max-width:500px) {
+    textarea {
+        width: 200px;
+    }
 }
 
 button {
-    position: absolute;
-    bottom: -45px;
-    left: 560px;
-    background-color: blue;
+    background-color: #448AFF;
     color: white;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 8px 10px;
+    border-radius: 15px;
+    padding: 10px 30px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 25px;
+    margin: 10px 0 0 10px;
+    outline: none;
+    box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.436);
 }
 
-@media(max-width: 991px) {
-    button {
-        left: 200px;
-    }
-
-    h2 {
-        left: 180px;
-    }
-}
-
-@media(max-width: 767px) {
-    button {
-        left: 50px;
-        padding: 12px 30px;
-        font-size: 20px;
-        bottom: -55px;
-    }
-
-    h2 {
-        left: 100px;
-    }
+svg {
+    position: absolute;
+    top: 380px;
+    z-index: -1;
+    width: 100%;
+    margin: auto;
 }
